<resources>
    <string name="app_name">app-controle-tarefas</string>
    <string name="txt_label_email">E-mail</string>
    <string name="txt_hint_email_tela_login">Digite seu e-mail...</string>
    <string name="txt_label_senha">Senha</string>
    <string name="txt_hint_senha_tela_login">Digite sua senha...</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_tela_login_cadastrar">Cadastre-se</string>
    <string name="txt_esqueceu_a_senha">Esqueceu a senha? Clique aqui</string>
    <string name="txt_tela_cadastro_usuario_titulo">Cadastrar-se</string>
    <string name="txt_tela_cadastro_usuario_label_nome">Nome</string>
    <string name="txt_tela_cadastrar_usuario_hint_nome">Digite seu nome...</string>
    <string name="txt_tela_cadastro_usuario_label_sobrenome">Sobrenome</string>
    <string name="txt_tela_cadastrar_usuario_hint_sobrenome">Digite seu sobrenome...</string>
    <string name="txt_tela_cadastrar_usuario_botao">Cadastrar</string>
    <string name="txt_tela_cadastro_usuario_label_email">E-mail</string>
    <string name="txt_tela_cadastrar_usuario_hint_email">Digite seu e-mail...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>